1. change direction of collection 2. learn BreadthFirstPath 3. build up DirectedGraph 4. update the jdk to 13 5. update the newInstance method in reflectClass