@@ -2,6 +2,7 @@ package pattern.factory.staticFactory;
 
 import pattern.factory.Car;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Iterator;
 import java.util.Map;
 
@@ -13,11 +14,11 @@ public class CarFactory {
         try {
             for (Map.Entry<String, String> entry : propertyMap.entrySet()) {
                 if (entry.getKey().equals(carName)) {
-                    car = (Car) Class.forName(entry.getValue()).newInstance();
+                    car = (Car) Class.forName(entry.getValue()).getDeclaredConstructor().newInstance();
                     break;
                 }
             }
-        } catch (IllegalAccessException | InstantiationException | ClassNotFoundException e) {
+        } catch (IllegalAccessException | InstantiationException | ClassNotFoundException | NoSuchMethodException | InvocationTargetException e) {
             e.printStackTrace();
         }
         if (car == null) {
